# python-cartolafc

./: .gitignore  .travis.yml  AUTHORS  CHANGES  LICENSE  README.md  examples.py  pyproject.toml  setup.py  tests.py  tox.ini
.github/workflows/: main.yml
cartolafc/: __init__.py  api.py  constants.py  decorators.py  error.py  errors.py  models.py  util.py
docs/: Makefile  make.bat
docs/source/: api.rst  badges.rst  changelog.rst  conf.py  contents.rst  index.rst  installation.rst  license.rst  quickstart.rst
examples/: .gitignore  examples.py  requirements.txt  test.py
requirements/: common.txt  development.txt
testdata/: amigos.json  clubes.json  clubs.json  get_team.json  get_team_by_round.json  highlights.json  liga.json  ligas.json  market.json  matches.json  parciais.json  partidas.json  patrocinadores.json  pontuacao_atleta.json  pos_rodada_destaques.json  round_highlights.json  round_score.json  rounds.json  schemes.json  search_league.json  search_team.json  sponsors.json  status.json  status_closed.json  status_mercado_aberto.json  status_mercado_fechado.json  status_opened.json  time.json  time_logado.json
tests/: test_api.py  test_utils.py
tests/testdata/: clubes.json  game_over.json  ligas.json  ligas_patrocinadores.json  mercado_atletas.json  mercado_destaques.json  mercado_destaques_reservas.json  mercado_status_aberto.json  mercado_status_fechado.json  partidas.json  time.json  time_logado.json  times.json
